[tool.poetry]
authors = ["Danil Arkhipov <aceloolrd@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.11.0.86"
numpy = "^2.2.3"
scikit-learn = "^1.6.1"
ipywidgets = "^8.1.5"

ultralytics = "^8.3.159"
filterpy = "^1.4.5"

[tool.poetry.dependencies.torch]
version = "2.5.1+cu124"
source = "custom-pytorch"

[tool.poetry.dependencies.torchvision]
version = "0.20.1+cu124"
source = "custom-pytorch"

[[tool.poetry.source]]
name = "custom-pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"  # Исправлено с "default"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
